--- a/FoodPiper/InviteTableViewCell.xib
+++ b/FoodPiper/InviteTableViewCell.xib
@@ -7,57 +7,86 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ActivityViewController" customModule="FoodPiper" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="99" id="Ec6-MA-0a6" customClass="MessageTableViewCell" customModule="FoodPiper" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="84" id="Ec6-MA-0a6" customClass="MessageTableViewCell" customModule="FoodPiper" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="82"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ec6-MA-0a6" id="zd0-pO-0NE">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="96.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="81.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="239" translatesAutoresizingMaskIntoConstraints="NO" id="EgP-bj-vKr">
-                        <rect key="frame" x="40" y="15" width="239" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="239" translatesAutoresizingMaskIntoConstraints="NO" id="EgP-bj-vKr">
+                        <rect key="frame" x="56" y="15" width="223" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTP-4E-CSe">
-                        <rect key="frame" x="71" y="50" width="49" height="30"/>
+                        <rect key="frame" x="60" y="42" width="70" height="30"/>
+                        <color key="backgroundColor" red="0.96078431369999995" green="0.64313725489999995" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="KKk-bQ-iGC"/>
-                            <constraint firstAttribute="width" constant="49" id="zxm-2n-2bJ"/>
+                            <constraint firstAttribute="width" constant="70" id="zxm-2n-2bJ"/>
                         </constraints>
-                        <state key="normal" title="Accept"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <state key="normal" title="Accept">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                         <connections>
                             <action selector="acceptMealInvite:" destination="-1" eventType="touchUpInside" id="9WU-x6-jGG"/>
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VSs-13-P7B">
-                        <rect key="frame" x="198" y="50" width="52" height="30"/>
+                        <rect key="frame" x="197" y="42" width="70" height="30"/>
+                        <color key="backgroundColor" red="0.96078431369999995" green="0.64313725489999995" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="52" id="Psa-uM-A5F"/>
+                            <constraint firstAttribute="width" constant="70" id="Psa-uM-A5F"/>
                             <constraint firstAttribute="height" constant="30" id="umY-J8-25u"/>
                         </constraints>
-                        <state key="normal" title="Decline"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <state key="normal" title="Decline">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                         <connections>
                             <action selector="declineMealInvite:" destination="-1" eventType="touchUpInside" id="o6x-aq-PVJ"/>
                         </connections>
                     </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YFn-GQ-ABl">
+                        <rect key="frame" x="8" y="21" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="0Xy-vE-FfH"/>
+                            <constraint firstAttribute="height" constant="40" id="AvV-2Q-bb1"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="VSs-13-P7B" firstAttribute="centerX" secondItem="zd0-pO-0NE" secondAttribute="centerX" constant="64" id="8Ag-8V-6Ov"/>
-                    <constraint firstItem="VSs-13-P7B" firstAttribute="top" secondItem="cTP-4E-CSe" secondAttribute="top" id="Cig-5a-ZNI"/>
-                    <constraint firstItem="EgP-bj-vKr" firstAttribute="top" secondItem="zd0-pO-0NE" secondAttribute="topMargin" constant="7" id="Lmi-bA-BYA"/>
+                    <constraint firstItem="cTP-4E-CSe" firstAttribute="top" secondItem="EgP-bj-vKr" secondAttribute="bottom" constant="6" id="0Sk-cR-c3k"/>
+                    <constraint firstItem="EgP-bj-vKr" firstAttribute="leading" secondItem="YFn-GQ-ABl" secondAttribute="trailing" constant="8" id="1MI-PJ-NMv"/>
+                    <constraint firstItem="VSs-13-P7B" firstAttribute="centerX" secondItem="zd0-pO-0NE" secondAttribute="centerX" constant="72" id="8Ag-8V-6Ov"/>
+                    <constraint firstItem="YFn-GQ-ABl" firstAttribute="centerY" secondItem="zd0-pO-0NE" secondAttribute="centerY" id="E8p-45-5fD"/>
                     <constraint firstAttribute="trailingMargin" secondItem="EgP-bj-vKr" secondAttribute="trailing" constant="33" id="Rgk-ir-fqX"/>
-                    <constraint firstItem="EgP-bj-vKr" firstAttribute="leading" secondItem="zd0-pO-0NE" secondAttribute="leadingMargin" constant="32" id="UBu-u7-CRT"/>
-                    <constraint firstItem="cTP-4E-CSe" firstAttribute="centerX" secondItem="zd0-pO-0NE" secondAttribute="centerX" constant="-64.5" id="ew9-UL-e8g"/>
-                    <constraint firstItem="VSs-13-P7B" firstAttribute="top" secondItem="EgP-bj-vKr" secondAttribute="bottom" constant="14" id="lkS-bP-del"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="VSs-13-P7B" secondAttribute="bottom" constant="8.5" id="yL8-67-scc"/>
+                    <constraint firstItem="cTP-4E-CSe" firstAttribute="centerX" secondItem="zd0-pO-0NE" secondAttribute="centerX" constant="-65" id="ew9-UL-e8g"/>
+                    <constraint firstAttribute="leadingMargin" secondItem="YFn-GQ-ABl" secondAttribute="leading" id="l7z-Sc-Jb2"/>
+                    <constraint firstItem="VSs-13-P7B" firstAttribute="top" secondItem="EgP-bj-vKr" secondAttribute="bottom" constant="6" id="lkS-bP-del"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="VSs-13-P7B" secondAttribute="bottom" constant="2" id="pko-TM-bX2"/>
+                    <constraint firstItem="EgP-bj-vKr" firstAttribute="top" secondItem="zd0-pO-0NE" secondAttribute="topMargin" constant="7" id="qlK-ti-jEc"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="btnNegative" destination="VSs-13-P7B" id="W9o-Tj-Dng"/>
+                <outlet property="btnPositive" destination="cTP-4E-CSe" id="olw-Hj-y5T"/>
                 <outlet property="lblMessage" destination="EgP-bj-vKr" id="KGt-ID-k1m"/>
             </connections>
-            <point key="canvasLocation" x="236" y="115.5"/>
+            <point key="canvasLocation" x="236" y="108"/>
         </tableViewCell>
     </objects>
 </document>
